Support: Fix the alignment of the "Viewing" text inside topics when multiple pages exist.
Props dufresnesteven, SergeyBiryukov.
See #2822.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@9696 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -496,8 +496,7 @@ $paginationBreakPoint: "600px";
 			flex-direction: column;
 
 			@media (min-width: $paginationBreakPoint) {
-				float: right;
-				display: inline-block;
+				display: block;
 			}
 
 			.page-numbers {
